--- a/DatabaseAnalyzer/DatabaseAnalyzer.csproj
+++ b/DatabaseAnalyzer/DatabaseAnalyzer.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\SchemaTableDTO.cs" />
     <Compile Include="DTOs\TeamMemberDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
