--- a/DatabaseAnalyzer/DatabaseAnalyzer.csproj
+++ b/DatabaseAnalyzer/DatabaseAnalyzer.csproj
@@ -42,13 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\StoredProcParamDTO.cs" />
+    <Compile Include="DTOs\UserDTO.cs" />
     <Compile Include="DTOs\SchemaTableDTO.cs" />
     <Compile Include="DTOs\TeamMemberDTO - Copy.cs" />
     <Compile Include="DTOs\ProductDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Try2.cs" />
-    <Compile Include="Try1.cs" />
+    <Compile Include="Tries\Try4_SpInfo.cs" />
+    <Compile Include="Tries\Try3_SpWithParams.cs" />
+    <Compile Include="Tries\Try2.cs" />
+    <Compile Include="Tries\Try1.cs" />
     <Compile Include="Util\DTOStringMaker.cs" />
   </ItemGroup>
   <ItemGroup>
