--- a/DatabaseAnalyzer/DatabaseAnalyzer.csproj
+++ b/DatabaseAnalyzer/DatabaseAnalyzer.csproj
@@ -49,10 +49,12 @@
     <Compile Include="DTOs\ProductDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tries\Try5.cs" />
     <Compile Include="Tries\Try4_SpInfo.cs" />
     <Compile Include="Tries\Try3_SpWithParams.cs" />
     <Compile Include="Tries\Try2.cs" />
     <Compile Include="Tries\Try1.cs" />
+    <Compile Include="Util\TableInfo.cs" />
     <Compile Include="Util\DTOStringMaker.cs" />
   </ItemGroup>
   <ItemGroup>
