--- a/DatabaseAnalyzer/DatabaseAnalyzer.csproj
+++ b/DatabaseAnalyzer/DatabaseAnalyzer.csproj
@@ -42,9 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DTOs\StoredProcParamDTO.cs" />
+    <Compile Include="Util\Misc.cs" />
+    <Compile Include="Util\StoredProcParamDTO.cs" />
     <Compile Include="DTOs\UserDTO.cs" />
-    <Compile Include="DTOs\SchemaTableDTO.cs" />
+    <Compile Include="Util\DbHelper.cs" />
+    <Compile Include="Util\SchemaTableDTO.cs" />
     <Compile Include="DTOs\TeamMemberDTO - Copy.cs" />
     <Compile Include="DTOs\ProductDTO.cs" />
     <Compile Include="Program.cs" />
