--- a/DatabaseAnalyzer/DatabaseAnalyzer.csproj
+++ b/DatabaseAnalyzer/DatabaseAnalyzer.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="Misc\StoredProcFuncs.cs" />
     <Compile Include="Tries\Try6.cs" />
-    <Compile Include="Util\Misc.cs" />
+    <Compile Include="Util\MiscUtil.cs" />
     <Compile Include="Util\StoredProcParamDTO.cs" />
     <Compile Include="DTOs\UserDTO.cs" />
     <Compile Include="Util\DbHelper.cs" />
