--- a/DatabaseAnalyzer/DatabaseAnalyzer.csproj
+++ b/DatabaseAnalyzer/DatabaseAnalyzer.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Misc\StoredProcFuncs.cs" />
+    <Compile Include="Tries\Try7.cs" />
     <Compile Include="Tries\Try6.cs" />
     <Compile Include="Util\MiscUtil.cs" />
     <Compile Include="Util\StoredProcParamDTO.cs" />
