--- a/DatabaseAnalyzer/DatabaseAnalyzer.csproj
+++ b/DatabaseAnalyzer/DatabaseAnalyzer.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Misc\StoredProcFuncs.cs" />
     <Compile Include="Tries\Try7.cs" />
     <Compile Include="Tries\Try6.cs" />
+    <Compile Include="Util\SqlTableStringMaker.cs" />
     <Compile Include="Util\MiscUtil.cs" />
     <Compile Include="Util\StoredProcParamDTO.cs" />
     <Compile Include="DTOs\UserDTO.cs" />
